# freecad_ai_addon

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  AGENT_FRAMEWORK_SUMMARY.md  CONTRIBUTING.md  INSTALLATION.md  Init.py  InitGui.py  InitGui.py.bak  README.md  WORKBENCH_FIX_SUMMARY.md  afterwork.md  check_features.py  complete_interactive_elements.py  debug_hang.py  fix_lint_errors.py  fix_locale.sh  format_code.sh  install_addon.bat  install_addon.py  install_addon.sh  package.xml  pytest.ini  requirements.txt  run_tests.sh  setup_dev_env.bat  taskplan.md  taskplan_backup.md  test_action_library.py  test_agent_framework.py  test_agent_integration.py  test_agent_safety.py  test_complete_agent_integration.py  test_decision_engine.py  test_enhanced_features.py  test_file_issue.py  test_initgui_freecad.py  test_initgui_import.py  test_integration.py  (+4 more)
docs/: FreeCAD_Workbench_Development.md  KCL_KittyCAD.md  Kognitives Scaffolding: Eine Solver-gestützte, Multi-Agenten-Architektur für kontextsensitive KI in FreeCAD.md  README.md  Text-toCAD_Parametric-B-REP-CAD-Models.md  dependencies-research.md  k.txt  troubleshooting_guide.md  user_manual.md
freecad_ai_addon/: __init__.py
scripts/: run_tests_appimage.sh
test_reports/: coverage.xml  junit.xml
tests/: __init__.py  test_action_library.py  test_agent_integration.py  test_collaboration_features.py  test_config.py  test_connection_manager_sessions.py  test_conversation_widget.py  test_decision_engine_routing.py  test_enhanced_features.py  test_feature_recognition.py  test_feature_recognition_integration.py  (+16 more)
(+75 files in other folders)
